<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="5"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/purble_location_marker" />

        <TextView
            android:id="@+id/app_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:layout_weight="1"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/app_describtion"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/app_describation_text"
            android:layout_weight="1"
            android:textColor="@color/gray"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_button"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/mapButton"
            android:background="@drawable/rounded_rectangle"
            />
    </LinearLayout>




</LinearLayout>