<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity"
    android:orientation="vertical"
    android:weightSum="5"
    >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="4"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_info_section"
            android:text="@string/my_location_details"
            android:textColor="@color/liver_chestunt"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:id="@+id/latitude_info">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/latitude_lable"
                android:text="@string/latitude_lable"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:layout_weight="1"
                 />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/liver_chestunt"
                android:id="@+id/location_latitude_value"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:id="@+id/longitude_info">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/longitude_lable"
                android:text="@string/longitude_lable"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/location_longitude_value"
                android:layout_weight="2"
                android:textColor="@color/liver_chestunt"

                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>